Update Class 3 Ex 1 Bar Plot with our data .Rmd

--- a/classes/Class 3 Ex 1 Bar Plot with our data .Rmd
+++ b/classes/Class 3 Ex 1 Bar Plot with our data .Rmd
@@ -45,3 +45,12 @@ plot = base +
 plot
 ```
 
+```{r}
+base= ggplot(mydata, aes(x=locale,pct)) 
+lolliplot1=base + geom_segment(aes(y = 0, 
+                                   x = locale, 
+                                   yend = pct, 
+                                   xend = locale), color = "grey50") 
+lolliplot1 + geom_point()
+```
+
